# plm-rs

./: .env  .gitignore  Cargo.toml  Changelog.md  Readme.md
migrations/2020-05-15-134125_initial_setup/: down.sql  up.sql
migrations/2020-05-19-012929_mqty_added/: down.sql  up.sql
src/: bom.rs  builds.rs  config.rs  inventory.rs  lib.rs  main.rs  models.rs  parts.rs  prompt.rs  schema.rs  schematic.rs  tables.rs
src/tables/: bom.rs  builds.rs  inventory.rs  parts.rs
test/: inventory.csv
