[package]
name = "eagle-plm"
version = "0.1.2"
authors = ["Jared Wolff <hello@jaredwolff.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4", features = ["sqlite", "chrono"] }
diesel_migrations = "1.4"
csv = "1"
dotenv = "0.15"
chrono = "0.4"
prettytable-rs = "0.8"
quick-xml = { version = "0.22", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
clap = "~3.0.0-beta.2"
anyhow = "1.0"
